tests/fail/invalid_frequency.stderr
error: `frequency` should be less than `rate`, which is 44100 Hz
 --> tests/fail/invalid_frequency.rs:9:39
  |
9 |     let _wave = sine_wave!(frequency: 50000);
  |                                       ^^^^^
